--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-tzlocal
 alembic==1.3.2
+attrs==21.2.0
 bcrypt==3.1.7
 cffi==1.13.2
 Click==7.0
@@ -10,20 +10,29 @@ Flask-Migrate==2.5.2
 Flask-Script==2.0.6
 Flask-SQLAlchemy==2.4.1
 Flask-WTF==0.14.2
+gunicorn==20.1.0
+iniconfig==1.1.1
 itsdangerous==1.1.0
 Jinja2==2.11.3
 Mako==1.1.0
 MarkupSafe==1.1.1
 numpy==1.17.4
+packaging==20.9
 pandas==0.25.3
 Pillow==8.1.1
+pluggy==0.13.1
 psycopg2==2.8.6
+py==1.10.0
 pycparser==2.19
+pyparsing==2.4.7
+pytest==6.2.4
 python-dateutil==2.8.1
 python-editor==1.0.4
 pytz==2019.3
 six==1.13.0
 SQLAlchemy==1.3.11
+toml==0.10.2
+tzlocal==2.1
 Werkzeug==0.16.0
 WTForms==2.2.1
 WTForms-SQLAlchemy==0.1
